--- a/build.gradle
+++ b/build.gradle
@@ -13,18 +13,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-	compileOnly('org.projectlombok:lombok')
-	annotationProcessor('org.projectlombok:lombok')
 
-	testCompileOnly ('org.projectlombok:lombok:1.18.12')
-	testAnnotationProcessor ('org.projectlombok:lombok:1.18.12')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('mysql:mysql-connector-java')
+
+	compileOnly('org.projectlombok:lombok:1.18.12')
+	annotationProcessor('org.projectlombok:lombok:1.18.12')
+
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
-test {
-	useJUnitPlatform()
 
-}
