--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,13 @@ dependencies {
 
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	//compile('mysql:mysql-connector-java')
-	compile('org.postgresql:postgresql')
+	compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
+
+	compile('mysql:mysql-connector-java')
+	//compile('org.postgresql:postgresql')
+
+	compile('io.springfox:springfox-swagger2:2.7.0')
+	compile('io.springfox:springfox-swagger-ui:2.7.0')
 
 	compileOnly('org.projectlombok:lombok:1.18.12')
 	annotationProcessor('org.projectlombok:lombok:1.18.12')
@@ -29,8 +34,8 @@ dependencies {
 	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
 
-test {
-	useJUnitPlatform()
-}
+//test {
+//	useJUnitPlatform()
+//}
 
 
