--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
-    #postgreSQL
+    # postgreSQL
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-    #mySQL
+    # mySQL
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
@@ -20,6 +20,9 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ADMINISTRATION
+admin.mail=dannyapplications@gmail.com
 
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=ae78d6fcae8c346cf679b14c6aea578d
