--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
+	compile('com.google.code.gson:gson:2.8.2')
 
 	compile('mysql:mysql-connector-java')
 	//compile('org.postgresql:postgresql')
