--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
 	compile('com.google.code.gson:gson:2.8.2')
 
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+
 	compile('mysql:mysql-connector-java')
 	//compile('org.postgresql:postgresql')
 
