--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-mail:2.2.2.RELEASE')
 	compile('com.google.code.gson:gson:2.8.2')
-
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.2.3.RELEASE'
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 
 	compile('mysql:mysql-connector-java')
