Mail creator + template added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ info.company.phone = isEmpty
 
 
 # ADMINISTRATION
+admin.name=Daniel
 admin.mail=dannyapplications@gmail.com
 
 trello.api.endpoint.prod=https://api.trello.com/1
